Fixed size and alignment of some characters

--- a/super_dash/src/css/characterDash.css
+++ b/super_dash/src/css/characterDash.css
@@ -3,7 +3,7 @@
     position: relative; 
     width: 200px; 
     height: 200px;
-    background: white; 
+    background: yellow; 
     border: 1px solid grey;
     border-radius: 50%;
 }
@@ -16,6 +16,12 @@
 
 .characterAbsolute{
     position: absolute;
+}
+
+.characterAbsolute img{
+    display: block;
+    margin-left: auto;
+    margin-right: auto;
 }
 
 .frameAbsolute{
@@ -41,6 +47,13 @@
     background-color: white;
     width: 200px;
     height: 300px;
+    border: 1px solid black;
+    border-radius: 5%;
+}
+
+.infoBox p{
+    margin-top: 10px;
+    margin-left: 10px;
 }
 
 .noSelect {
